[gd_scene load_steps=11 format=2]

[ext_resource path="res://Background_Menu.png" type="Texture" id=1]
[ext_resource path="res://AssetsMenu/SAirr.tres" type="Texture" id=2]
[ext_resource path="res://AssetsMenu/Music.tres" type="Texture" id=3]
[ext_resource path="res://AssetsMenu/MusicMute.tres" type="Texture" id=4]
[ext_resource path="res://Menu.gd" type="Script" id=5]
[ext_resource path="res://AssetsMenu/Play.tres" type="Texture" id=6]
[ext_resource path="res://AssetsMenu/JogoFrutas/Habede Font by 7NTypes.otf" type="DynamicFontData" id=7]
[ext_resource path="res://AssetsMenu/Play And Learn.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.278431 ), Color( 0, 0, 0, 0.45098 ), Color( 0, 0, 0, 0.556863 ), Color( 0, 0, 0, 0.705882 ), Color( 0, 0, 0, 0.811765 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Node2D" type="Node2D"]
position = Vector2( -1.52588e-05, 0.943871 )
script = ExtResource( 5 )

[node name="Play And Learn" type="Sprite" parent="."]
visible = false
position = Vector2( 511.777, 297.733 )
scale = Vector2( 0.533101, 0.551357 )
texture = ExtResource( 8 )

[node name="Background_Menu" type="Sprite" parent="."]
position = Vector2( 511.648, 299.54 )
scale = Vector2( 0.533236, 0.560111 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
visible = false
margin_top = 178.968
margin_right = 1023.0
margin_bottom = 302.968
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Play and learn"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="TextureButton" parent="."]
visible = false
margin_left = 16.1204
margin_top = 226.102
margin_right = 117.12
margin_bottom = 327.102
rect_pivot_offset = Vector2( -659.654, -386.465 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="."]
margin_left = -0.258591
margin_top = 494.465
margin_right = 100.741
margin_bottom = 595.465
rect_pivot_offset = Vector2( -659.654, -386.465 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 450.431
margin_top = 321.852
margin_right = 550.431
margin_bottom = 421.852
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="."]
margin_top = -1.0
margin_right = 113.0
margin_bottom = 107.0
custom_icons/off = ExtResource( 3 )
custom_icons/on = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Transição" = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 3.05176e-05
margin_top = 0.00025177
margin_right = 1024.0
margin_bottom = 605.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button2" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="toggled" from="CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
